<resources>
    <string name="app_name">split.do</string>
    <string name="edit_task_description">Describe your task here</string>
    <string name="with_group">With group: </string>
    <string name="add_location">Add your task location</string>
    <string name="add_button">Add</string>
    <string name="add_icon">add sign</string>
    <string name="location_icon">location sign</string>
    <string name="no_group">None</string>
    <string name="edit_group_name">Name your group</string>
    <string name="add_members">Add members</string>
    <string name="add_new_task">Add a new task</string>
    <string name="add_new_group">Add a new group</string>
    <string name="edit_enter_name">Enter name</string>
    <string name="permission_granted">permission granted</string>
    <string name="permission_not_granted">permission not granted</string>
    <string name="action_signout">sign out</string>
    <string name="edit_enter_email">Enter email here</string>
    <string name="pending_tasks">Pending Tasks</string>
    <string name="select_contacts">Select contact from below :</string>
    <string name="delete_task_button">delete task</string>
    <string name="signed_in">you are signed in</string>
    <string name="welcome_message">Welcome, Hi from Split.do</string>
    <string name="no_location">No Location Specified</string>
    <string name="created_by">created by</string>
    <string name="empty_placeholder">-</string>
    <string name="completed_by">completed by</string>
    <string name="floating_action_button">floating action button</string>
    <string name="personal_tasks">Personal</string>
    <string name="groups">groups</string>
</resources>
