<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/vertical_margin"
    android:paddingEnd="@dimen/horizontal_margin"
    android:paddingLeft="@dimen/horizontal_margin"
    android:paddingRight="@dimen/horizontal_margin"
    android:paddingStart="@dimen/horizontal_margin"
    android:paddingTop="@dimen/vertical_margin">
    <!--check if context is to be added-->

    <!--group name-->
    <EditText

        android:id="@+id/et_group_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:inputType="text"
        android:hint="@string/edit_group_name"
        android:paddingBottom ="16dp"/>

    <!--add button-->

    <Button
        android:id="@+id/add_group_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/add_button"
        android:background="@color/colorAccent"
        style="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"
        android:enabled="false"
        android:onClick="onClickAddTask"
        />


    <!--add members button/click-->

    <LinearLayout
        android:id="@+id/ll_add_members"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_black_72dp"
            android:tint="@color/colorAccent"
            android:contentDescription="@string/add_icon"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:text="@string/add_members"/>

    </LinearLayout>




</LinearLayout>