<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/vertical_margin"
    android:paddingEnd="@dimen/horizontal_margin"
    android:paddingLeft="@dimen/horizontal_margin"
    android:paddingRight="@dimen/horizontal_margin"
    android:paddingStart="@dimen/horizontal_margin"
    android:paddingTop="@dimen/vertical_margin">
    <!--check if context is to be added-->


    <!--group info-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:text="@string/with_group"/>

        <FrameLayout
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:text="@string/no_group"/>
            <Spinner
                android:id="@+id/spinner_group_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible">

            </Spinner>

        </FrameLayout>

    </LinearLayout>


    <!--task description-->
    <EditText

        android:id="@+id/et_task_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:inputType="text"
        android:hint="@string/edit_task_description"
        android:paddingBottom ="@dimen/vertical_margin"/>


    <!--add location button/click-->

    <LinearLayout
        android:id="@+id/ll_add_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_black_72dp"
            android:tint="@color/colorAccent"
            android:padding="8dp"
            android:contentDescription="@string/add_icon"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:text="@string/add_location"/>

    </LinearLayout>

    <!--added location-->
    <LinearLayout
        android:id="@+id/ll_added_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="fill"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:tint="@color/colorAccent"
            android:src="@drawable/ic_place_black_24dp"
            android:contentDescription="@string/location_icon"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp"
            >

            <TextView
                android:id="@+id/tv_location_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:maxLines="1"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
        </LinearLayout>

    </LinearLayout>

    <!--add button-->

    <Button
        android:id="@+id/add_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add_button"
        android:background="@color/colorAccent"
        style="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"
        android:enabled="false"
        android:onClick="onClickAddTask"/>

</LinearLayout>